<resources>
    <string name="app_name" translatable="false">segfault</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="tutte_le_strutture" translatable="false">tutte le strutture</string>
    <string name="nome" translatable="false" />
    <string name="informazioni_struttura" translatable="false">informazioni struttura</string>
    <string name="indirizzo" translatable="false">indirizzo:</string>
       <string name="annulla" translatable="false">Annulla</string>
    <string name="numero_partecipanti" translatable="false">Numero partecipanti:</string>
    <string name="conferma" translatable="false">conferma</string>
    <string name="ora" translatable="false">Ora:</string>
    <string name="data" translatable="false">Data:</string>
    <string name="struttura" translatable="false">Struttura:</string>
    <string name="inserimento_nuova_struttura" translatable="false">inserimento nuova struttura</string>
    <string name="descrizione_opzionale" translatable="false">Descrizione (opzionale)</string>
    <string name="nome_della_struttura" translatable="false">Nome della struttura</string>
    <string name="orario_apertura" translatable="false">orario apertura</string>
    <string name="orario_chiusura"  translatable="false">orario chiusura</string>
    <string name="inserisci_indirizzo_della_struttura" translatable="false">Inserisci indirizzo della struttura</string>
    <string name="descrizione" translatable="false">descrizione</string>
    <string name="giornate_apertura" translatable="false">Giornate apertura</string>
    <string name="giorni_lavorativi" translatable="false">Giorni lavorativi:</string>
    <string name="le_tue_sfide" translatable="false">le tue sfide</string>
    <string name="mettiti_alla_prova" translatable="false">mettiti alla prova</string>
    <string name="crea_una_nuva_sfida" translatable="false">crea una nuva sfida</string>
    <string name="orario_inizio" translatable="false">orario inizio</string>
    <string name="orario_fine" translatable="false">orario fine</string>
    <string name="username" translatable="false">username</string>

    <string name="password" translatable="false">password</string>
    <string name="anulla" translatable="false">Anulla</string>
    <string name="vuoi_diventare_un_utente_promtore" translatable="false">vuoi diventare un utente promtore?</string>
    <string name="registrati" translatable="false">Registrati</string>

    <string name="mail">Mail:</string>
    <string name="name">Name</string>
    <string name="sport">Sport</string>
    <string name="nuova_attivit">nuova attività</string>
    <string name="range_di_et">Range di età</string>
    <string name="definisci_i_tuoi_passi">definisci i tuoi passi</string>
    <string name="crea_un_nuovo_spazio">Crea un nuovo spazio</string>
    <string name="crea_una_nuova_partita">crea una nuova partita</string>
    <string name="communicazione_positivit">communicazione positività</string>
    <string name="prenotazione_attivit">prenotazione attività</string>
    <string name="utente_promotore">Utente promotore</string>
    <string name="nuova_prenotazione">nuova prenotazione</string>
    <string name="home">Home</string>
    <string name="prenotazioni">prenotazioni</string>
    <string name="strutture">strutture</string>
    <string name="utente">utente</string>
    <string name="login">login</string>
    <string name="logout">logout</string>

    <string name="crea_una_nuova_attivit">crea una nuova attività</string>
    <string name="scrivi_una_descrizione_accattivante">scrivi una descrizione accattivante</string>
    <string name="attivit">attività</string>
    <string name="data_ora">data/ora:</string>
    <string name="fascia_oraria">fascia oraria</string>
    <string name="space">-</string>
    <string name="Nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="cod_fisc">Cod. fisc</string>
    <string name="data_di_nascita">Data di nascita:</string>
    <string name="attivi">Attività:</string>
    <string name="fascia">Fascia oraria:</string>
    <string name="range_e">Range età:</string>
    <string name="Descrizione">Descrizione:</string>
    <string name="Mail">Mail</string>
    <string name="Indirizzo">Indirizzo</string>
    <string name="Data_di_nascita">Data di nascita</string>
    <string name="Password">Password</string>
    <string name="attività">Attività</string>
    <string name="descrizione_promotore">descrizione promotore</string>
    <string name="elimina">elimina</string>
    <string name="testo_evento">testo evento</string>
    <string name="partecipa">partecipa</string>
    <string name="cerca">cerca</string>
    <string name="cerca_uno_sport">cerca uno sport</string>
    <string name="cerca_senza_vincoli">cerca senza vincoli</string>
    <string name="tel">Tel:</string>
    <string name="Orario_apertura">Orario apertura:</string>
    <string name="Orario_chiusura">Orario chiusura:</string>
    <string name="Numero_partecipanti">Numero Partecipanti:</string>
    <string name="attivita">Attività:</string>
    <string name="Struttura">Struttura</string>
    <string name="Data_ora">Data ora:</string>
    <string name="le_tue_strutture">Le tue strutture:</string>
    <string name="nome_attivita">Nome attivita</string>
    <string name="incontri_in_programma">incontri in programma</string>
    <string name="capienza">Capienza:</string>
    <string name="tutte_le_sue_strutture">Tutte le sue strutture</string>
    <string name="scrivi_una_descrizione_accattivante_">Scrivi una descrizione accattivante</string>
    <string name="numero_di_posti">Numero di posti</string>
    <string name="alcune_info_sul_promotore">alcune info sul promotore</string>
    <string name="orario_lavorativo">Orario lavorativo:</string>
    <string name="lun">Lun</string>
    <string name="mar">Mar</string>
    <string name="mer">Mer</string>
    <string name="gio">Gio</string>
    <string name="ven">Ven</string>
    <string name="dom">Dom</string>
    <string name="sab">Sab</string>
    <string name="orario_inizio_fine">orario inizio-fine</string>
    <string name="inserisci_descrizione_evento">inserisci descrizione evento</string>
    <string name="textview">TextView</string>

    <string name="disiscriviti">Disiscriviti</string>

    <string name="info">info</string>
    <string name="elimina_account">elimina account</string>
    <string name="modifica_informazioni">modifica informazioni</string>
    <string name="nome_attivit">Nome attività</string>
</resources>