<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.segfault.MainActivity">
    <item android:id="@+id/nav_book"
        android:icon="@drawable/ic_prenotazioni"
        android:title="@string/prenotazioni"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/nav_structure_promo"
        android:icon="@drawable/ic_struttura"
        android:title="@string/strutture" />

    <item android:id="@+id/nav_user_promo"
        android:icon="@drawable/ic_user"
        android:title="@string/utente" />

    <item android:id="@+id/nav_logout_promo"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>