<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="-36dp">


    <CheckBox
        android:id="@+id/check_dom_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/dom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.319" />

    <CheckBox
        android:id="@+id/check_gi_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/gio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.248" />

    <CheckBox
        android:id="@+id/check_me_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/mer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.799"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.248" />

    <CheckBox
        android:id="@+id/check_lun_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:minHeight="48dp"
        android:text="@string/lun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.011" />

    <CheckBox
        android:id="@+id/check_ve_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/ven"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.319" />

    <CheckBox
        android:id="@+id/check_mar_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/mar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.248" />

    <CheckBox
        android:id="@+id/check_sa_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/sab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.319" />

    <Button
        android:id="@+id/cancel_create_info_struct_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D30B0B"
        android:text="@string/annulla"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_create_info_struct_promo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirm_create_info_struct_promo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/confirm_create_info_struct_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/conferma"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toEndOf="@+id/cancel_create_info_struct_promo"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.908" />

    <Button
        android:id="@+id/delete_structure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#D30B0B"
        android:text="@string/elimina"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cancel_create_info_struct_promo"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.908" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="76dp"
        android:layout_height="27dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:minHeight="48dp"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/name"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/name_info_struct_promo"
        android:layout_width="212dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-black"

        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/street_addr_info_struct_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:ems="10"

        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/number_info_struct_promo"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/street_addr_info_struct_promo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/street_addr_info_struct_promo"
        app:layout_constraintTop_toBottomOf="@+id/street_addr_info_struct_promo"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:shadowColor="@color/black"
        android:text="@string/giorni_lavorativi"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:shadowColor="@color/black"
        android:text="@string/Indirizzo"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/street_addr_info_struct_promo"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_info_struct_promo"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:shadowColor="@color/black"
        android:text="@string/Descrizione"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/street_addr_info_struct_promo"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_info_struct_promo"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="33dp"
        android:shadowColor="@color/black"
        android:text="@string/capienza"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="109dp"
        android:layout_height="28dp"
        android:shadowColor="@color/black"
        android:text="@string/Orario_apertura"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="111dp"
        android:layout_height="23dp"
        android:shadowColor="@color/black"
        android:text="@string/Orario_chiusura"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.144" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/opening_time__info_struct_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/closing_time_info_struct_promo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/closing_time_info_struct_promo"
        app:layout_constraintTop_toBottomOf="@+id/number_info_struct_promo"
        app:layout_constraintVertical_bias="0.08" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/closing_time_info_struct_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opening_time__info_struct_promo"
        app:layout_constraintVertical_bias="0.08" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/desc_info_struct_promo"
        android:layout_width="347dp"
        android:layout_height="78dp"
        android:maxLines="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.089"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>